Progress on GP derivations for appendix.

--- a/math/post_approx_with_GP_emulators.bib
+++ b/math/post_approx_with_GP_emulators.bib
@@ -1,5 +1,16 @@
 
 %  ---------------------------------------------------------------------------------------------------
+% General/Background
+%  ---------------------------------------------------------------------------------------------------
+
+@misc{MinkaMatrixLectures,
+  author = {Thomas P. Minka},
+  title = {Old and New Matrix Algebra Useful for Statistics},
+  month = {December},
+  year = {2000}
+}
+
+%  ---------------------------------------------------------------------------------------------------
 % General Gaussian Processes (GPs) and Bayesian Optimization
 %  ---------------------------------------------------------------------------------------------------
 
