--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -40,6 +40,7 @@
 \newcommand{\gpMean}[1][\Ndesign]{\gpMeanPrior_{#1}}
 \newcommand{\gpKer}[1][\Ndesign]{\gpKerPrior_{#1}}
 \newcommand{\nuggetSD}{\eta}
+\newcommand{\kerMat}[1][\Ndesign]{K_{#1}}
 
 % Exponentiated quadratic kernel.
 \newcommand{\lengthscale}{\ell}
@@ -106,6 +107,7 @@
 \newcommand{\designBatchIn}{U_{\Nbatch}}
 \newcommand{\designBatchLlik}{\ell_{\Nbatch}}
 \newcommand{\designBatchFunc}{\varphi_{\Nbatch}}
+\newcommand{\funcVal}[1][\Ndesign]{\varphi_{#1}}
 \newcommand{\designBatchFwd}{g_{\Nbatch}}
 \newcommand{\acq}[1][\Ndesign]{\mathcal{A}_{#1}}
 \newcommand{\design}[1][\Ndesign]{\mathcal{D}_{#1}}
