--- a/math/post_approx_with_GP_emulators.tex
+++ b/math/post_approx_with_GP_emulators.tex
@@ -127,16 +127,17 @@ A GP is defined by its \textit{mean function} $\gpMeanPrior: \parSpace \to \R$ a
 $\GP(\gpMeanPrior, \gpKerPrior)$. Throughout this paper, we will vectorize notation as follows. Letting 
 $\tilde{\parMat} \Def [\tilde{\Par}_1, \dots, \tilde{\Par}_M]  \subset \parSpace$ be a second set of inputs, we define 
 $\func(\parMat) \Def [\func(\Par_1), \dots, \func(\Par_\Ndesign)]^\top \in \R^{\Ndesign}$ (and similarly for $\gpMeanPrior(\parMat)$), 
-$\gpKerPrior(\parMat, \tilde{\parMat}) \Def \{\gpKerPrior(\Par_{\idxDesign}, \tilde{\Par}_m)\}_{1 \leq \idxDesign, m \leq \Ndesign} \in \R^{\Ndesign \times M}$, 
+$\gpKerPrior(\parMat, \tilde{\parMat}) \Def \{\gpKerPrior(\Par_{\idxDesign}, \tilde{\Par}_m)\}_{\substack{1 \leq \idxDesign \leq \Ndesign \\ 1 \leq m \leq M}} \in \R^{\Ndesign \times M}$, 
 and $\gpKerPrior(\parMat) \Def \gpKerPrior(\parMat, \parMat) \in \R^{\Ndesign \times \Ndesign}$. Given this notation, 
 the defining property of the GP can be written as 
 \begin{align}
 \func(\parMat) &\sim \Gaussian(\gpMeanPrior(\parMat), \gpKerPrior(\parMat)).
 \end{align}
-Now suppose that we have observed the (noiseless) function evaluations $\func(\designIn)$ at a set of \textit{design points} $\designIn$. 
-It is well-known \cite{gpML} that the conditional distribution $\func|\func(\designIn)$ is also a GP
+Now suppose that we have observed the (noiseless) function evaluations $\func(\designIn)$ at a set of \textit{design points} $\designIn$.
+We denote such an $N$-point design by $\design[\Ndesign] \Def \{\designIn, \func(\designIn)\}$. 
+It is well-known \cite{gpML} that the conditional distribution $\func|\design[\Ndesign]$ is also a GP
 \begin{align}
-\funcEm[\Ndesign] \Def \func|\func(\designIn) \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign]), \label{generic_gp_conditional}
+\funcEm[\Ndesign] \Def \func|\design[\Ndesign] \sim \GP(\gpMean[\Ndesign], \gpKer[\Ndesign]), \label{generic_gp_conditional}
 \end{align}
 with mean and kernel given by 
 \begin{align}
@@ -160,7 +161,12 @@ defined by the choice of positive hyperparameters $\margSD, \lengthscale_{1}, \d
 of a stationary, or shift-invariant, kernel since $\gpKer(\Par, \tilde{\Par})$ only depends on its arguments through their difference 
 $\Par - \tilde{\Par}$. To complete the GP prior specification, we typically take the mean 
 function to be a constant or quadratic. We opt for the common empirical Bayes approach of fixing all mean and kernel hyperparameters 
-at their maximum likelihood estimates. 
+at their maximum likelihood estimates. We let $\emLawPrior{\func}$ denote the distribution (law) of the GP prior, and 
+$\emLaw{\func}$ or $\emLaw[]{\funcEm}$
+\footnote{The latter notation $\emLaw[]{\funcEm}$ will prove convenient in the sequential design setting, when we consider 
+conditioning $\funcEm$ on a new set of design points.} 
+the distribution of the the conditional process $\func | \design[\Ndesign]$. It is implicit in this notation 
+that the GP hyperparameters have been fixed at their maximum likelihood values. 
 
 Finally, we consider the extension to multi-output functions $\func: \parSpace \to \R^{\dimObs}$. There is a large literature on multi-output 
 kernels (\todo: cite), but we focus here on the simplest case in which each output is modeled separately as an independent GP. 
@@ -181,7 +187,7 @@ approximates $\fwd$ or $\llik$.
 \subsubsection{Forward Model Emulation}
 If the output dimension $\dimObs$ is reasonably small, then a common approach is to specify an independent 
 multi-output GP prior directly for the forward model, $\fwd \sim \GP(\emMeanPrior{\fwd}, \emKerPrior{\fwd})$. After 
-conditioning on the design $\{(\Par_{\idxDesign}, \fwd(\Par_{\idxDesign}))\}_{\idxDesign=1}^{\Ndesign}$, 
+conditioning on the design $\design[\Ndesign] = \{(\Par_{\idxDesign}, \fwd(\Par_{\idxDesign}))\}_{\idxDesign=1}^{\Ndesign}$, 
 the predictive distribution $\fwdEm[\Ndesign] \sim \GP(\emMean[\Ndesign]{\fwd}, \emKer[\Ndesign]{\fwd})$ 
 represents the emulator for $\fwd$. We emphasize that $\fwdEm[\Ndesign]$ is a \textit{stochastic} surrogate; 
 the model output predictions at inputs $\parMat$ are given by the entire distribution 
@@ -198,7 +204,9 @@ In the case of the additive Gaussian likelihood \ref{llik_Gaussian} this approxi
 We emphasize two facts: (i.) the induced log-likelihood approximation $\llikEmFwd[\Ndesign](\Par)$ is also 
 stochastic, but no longer Gaussian; and (ii.) no surrogate modeling is performed directly for $\llik$; instead, 
 the approximation $\llikEmFwd[\Ndesign](\Par) = \llik(\Par; \fwdEm[\Ndesign])$ is derived by ``plugging in'' the 
-forward model emulator. This represents a modular surrogate-modeling approach \cite{modularization}. 
+forward model emulator. We let $\emLaw{\llikEmFwd[]}$ denote the distribution of the plug-in 
+log-likelihood surrogate, which is in general non-Gaussian.
+This represents a modular surrogate-modeling approach \cite{modularization}. 
 Emulating expensive models using GPs is one of the central questions 
 studied in the computer experiments literature; see \cite{gramacy2020surrogates} and 
 \cite{design_analysis_computer_experiments} for detailed treatments. Challenges arise when the output
@@ -226,7 +234,11 @@ of the likelihood, which usually results in a smoother response surface that is 
 The emulator construction proceeds as before; a GP prior $\llik \sim \GP(\emMeanPrior{\llik}, \emKerPrior{\llik})$ 
 is specified and the predictive 
 distribution $\llikEm[\Ndesign] \sim \GP(\emMean[\Ndesign]{\llik}, \emKer[\Ndesign]{\llik})$ obtained by 
-conditioning on the design $\{(\Par_{\idxDesign}, \llik(\Par_{\idxDesign}))\}_{\idxDesign=1}^{\Ndesign}$. 
+conditioning on the design $\design[\Ndesign] = \{(\Par_{\idxDesign}, \llik(\Par_{\idxDesign}))\}_{\idxDesign=1}^{\Ndesign}$
+\footnote{Note that we use the same notation $\design[\Ndesign]$ for the design in the forward model emulation, 
+log-likelihood emulation, and generic GP settings. This notation always refers for the design used to train the underlying
+GP, and will be clear from context.}. The distribution $\emLaw{\llik}$ of $\llikEm[\Ndesign]$ is Gaussian, unlike
+the log-likelihood surrogate in the forward model emulation setting. 
 The use of GPs to approximate log-likelihoods has been widely used in approximate Bayesian inference 
 (\cite{VehtariParallelGP, Kandasamy_2017, llikRBF, trainDynamics, quantileApprox, wang2018adaptive, landslideCalibration})
 and Bayesian quadrature (\cite{BayesQuadrature, BayesQuadRatios}). In the context of inverse problems with 
@@ -624,21 +636,26 @@ posterior approximation.
 
 \subsubsection{The Sequential Design Loop}
 Sequential design algorithms for GPs have been studied extensively across several fields. We introduce this topic 
-for a generic GP predictive distribution $\funcEm[\Ndesign] \Def \func|\func(\designIn)$, as defined in 
+for a generic GP predictive distribution $\funcEm[\Ndesign] \Def \func|\design[\Ndesign]$, as defined in 
 \ref{generic_gp_conditional}. To be clear, this notation indicates that the GP prior 
 $\func \sim \GP(\gpMeanPrior, \gpKerPrior)$ has already been conditioned on the \textit{initial design}
 $\design[\Ndesign] \Def \{\designIn, \func(\designIn)\}$. We now consider the question of identifying a new set of $\Nbatch$
 inputs $\designBatchIn$ to augment the initial design. We denote the new design by 
-$\design[\Naugment] \Def \{\designIn[\Naugment], \func(\designIn[\Naugment])\}$, where 
- $\designIn[\Naugment] \Def \designIn \cup \designBatchIn$. 
+$\design[\Naugment] \Def \design[\Ndesign] \cup \design[\Nbatch]$, where 
+$\design[\Nbatch] \Def \{\designBatchIn, \func(\designBatchIn)\}$. We will also use the notation 
+ $\designIn[\Naugment] \Def \designIn \cup \designBatchIn$.
 Conditioning on the augmented design results in the updated GP
 \begin{align}
-\funcEm[\Naugment] \Def \func|\design[\Naugment] = \funcEm[\Ndesign] | \func(\designIn[\Nbatch])   \sim \GP(\gpMean[\Naugment], \gpKer[\Naugment]),
+\funcEm[\Naugment] \Def \func|\design[\Naugment] = \funcEm[\Ndesign] | \design[\Nbatch] \sim \GP(\gpMean[\Naugment], \gpKer[\Naugment]),
 \end{align}
 where the predictive mean $\gpMean[\Naugment]$ and covariance $\gpKer[\Naugment]$ functions are given by \ref{kriging_eqns}
-with $\{\designIn, \func(\designIn)\}$ replaced by $\{\designIn[\Naugment], \func(\designIn[\Naugment])\}$. This update 
-can be computed in $\BigO(\Nbatch^3 + \Ndesign^2 \Nbatch)$ operations, a significant improvement over the naive $\BigO([\Ndesign + \Nbatch]^3)$
-implementation (courtesy of the partitioned matrix inverse identity \Cref{partitioned-matrix-inverse}). 
+with $\{\designIn, \func(\designIn)\}$ replaced by $\{\designIn[\Naugment], \func(\designIn[\Naugment])\}$. The equality 
+$\func|\design[\Naugment] = \funcEm[\Ndesign] | \design[\Nbatch]$, which is meant in distribution, can also be written 
+$\emLaw[{\design[\Naugment]}]{\func} = \emLaw[{\design[\Nbatch]}]{\funcEm}$, and is justified in \Cref{lemma:gp-condition-order}. 
+The update $\funcEm[\Ndesign] \to \funcEm[\Naugment]$ 
+can be computed in $\BigO(\Nbatch^3 + \Ndesign^2 \Nbatch + \Nbatch^2 \Ndesign)$ operations, 
+a significant improvement over the naive $\BigO([\Ndesign + \Nbatch]^3)$
+implementation (courtesy of the partitioned matrix inverse identity stated in \Cref{partitioned-matrix-inverse}). 
 Naturally, the new batch $\designBatchIn$ should be chosen to 
 yield maximal improvement in the GP model $\funcEm[\Naugment]$ with respect to the downstream task that is to be performed. 
 This idea naturally leads to an optimization problem of the form 
@@ -673,8 +690,12 @@ owing to the fact that $\func$ is only evaluated after an entire batch $\designB
 be selected without observing the outputs of the other points in the batch. The applications motivating this work render the 
 pure sequential design setting completely infeasible, as a single function evaluation $f(\Par)$ may require thousands of CPU hours. 
 However, computing resources often allow $\BigO(10^2)$ function evaluations to be performed in parallel. Such constraints imply a 
-``large batch, few iterations'' setting which poses a greater challenge than the one-at-a-time pure sequential design that is 
-often considered in the literature.
+``large batch, few iterations'' setting, posing additional challenges not faced in the pure sequential design context. We note that, 
+while the design framework summarized in \Cref{alg:seq_des_loop} does allow for consideration of within-batch interactions between design points, 
+it is still ``myopic'' in the sense that it disregards the potential for future acquisitions. Non-myopic strategies have been considered
+through a dynamic programming lens, though they typically come at the cost of significant 
+computational expense \cite{SURThesis, supermartingaleSUR}.
+
 
 \subsubsection{Acquisition Functions}
 We now summarize some particular choices of acquisition function $\acq[\Ndesign]$ which are popular in practice. These will form 
@@ -727,30 +748,30 @@ a fact which will become relevant in the subsequent section. We therefore state 
 dependence of the predictive mean on $\func(\designBatchIn)$, under the assumption that the latter is distributed according 
 to the current GP $\funcEm[\Ndesign]$. A similar result is also provided in \cite{VehtariParallelGP}. 
 \begin{lemma} \label{lemma:pred-mean-dist}
-Let $(\designBatchIn, \designBatchFunc)$ be a new batch of $\Nbatch$ design points, with 
-$\designBatchFunc \sim \Gaussian(\gpMean[\Ndesign](\designBatchIn), \gpKer[\Ndesign](\designBatchIn))$. 
+Let $\designRand{\designBatchFunc} \Def \{\designBatchIn, \designBatchFunc\}$ be a new batch of $\Nbatch$ design points, with 
+$\designBatchFunc | \designBatchIn \sim \Gaussian(\gpMean[\Ndesign](\designBatchIn), \gpKer[\Ndesign](\designBatchIn))$. 
 Let  
 \begin{align}
-\gpMean[\Naugment](\parMat | \designBatchFunc) 
-\Def \E[\funcEm[\Ndesign](\parMat) | (\designBatchIn, \designBatchFunc)] \label{conditional-mean-notation}
+\gpMean[\Naugment](\parMat ; \designBatchFunc) 
+\Def \E[\funcEm[\Ndesign](\parMat) | \designRand{\designBatchFunc}] \label{conditional-mean-notation}
 \end{align}
 denote the predictive mean at inputs $\parMat$ after conditioning $\funcEm[\Ndesign]$ on 
-$(\designBatchIn, \designBatchFunc)$. Then, the predictive mean $\gpMean[\Naugment](\parMat)$
+$\designRand{\designBatchFunc}$. Then, the predictive mean $\gpMean[\Naugment](\parMat; \designBatchFunc)$
 (viewed as a function of the random variable $\designBatchFunc$), satisfies 
 \begin{align}
-\gpMean[\Naugment](\parMat | \designBatchFunc)
+\gpMean[\Naugment](\parMat ; \designBatchFunc)
 \sim \Gaussian\left(\gpMean[\Ndesign](\parMat), 
-                               \gpKer[\Ndesign](\parMat) - \gpKer[\Naugment](\parMat) \right) \label{pred-mean-dist},
+                               \gpKer[\Ndesign](\parMat) - \gpKer[\Naugment](\parMat) \right) \label{pred-mean-dist}.
 \end{align}
 \end{lemma}
-We see that the expectation (with respect to $\designBatchFunc$) of $\gpMean[\Naugment](\parMat | \designBatchFunc)$ 
+We see that the expectation (with respect to $\designBatchFunc$) of $\gpMean[\Naugment](\parMat ; \designBatchFunc)$ 
 is equal to the current predictive mean $\gpMean[\Ndesign](\parMat)$. Since 
-$\gpMean[\Ndesign](\parMat) = \gpMean[\Naugment](\parMat | \gpMean[\Ndesign](\designBatchIn))$, this can also be 
+$\gpMean[\Ndesign](\parMat) = \gpMean[\Naugment](\parMat ; \gpMean[\Ndesign](\designBatchIn))$, this can also be 
 interpreted as the predictive mean resulting from the conditioning of $\funcEm[\Ndesign]$ on the ``pseudo-data''
-$(\designBatchIn, \gpMean[\Ndesign](\designBatchIn))$; i.e., treating the current GP predictive mean as if it were 
+$\{\designBatchIn, \gpMean[\Ndesign](\designBatchIn)\}$; i.e., treating the current GP predictive mean as if it were 
 the true response. The variance of 
-$\gpMean[\Naugment](\parMat | \designBatchFunc)$ is equal to the change in GP variance at the inputs $\parMat$ due to the act 
-of conditioning on the batch $\designBatchIn$. Therefore, the uncertainty in $\gpMean[\Naugment](\parMat | \designBatchFunc)$ 
+$\gpMean[\Naugment](\parMat ; \designBatchFunc)$ is equal to the change in GP variance at the inputs $\parMat$ due to the act 
+of conditioning on the batch $\designBatchIn$. Therefore, the uncertainty in $\gpMean[\Naugment](\parMat ; \designBatchFunc)$ 
 is large when the design points $\designBatchIn$ are more ``influential.''
 
 \subsection{Acquisition Functions for Posterior Approximation}
@@ -806,18 +827,27 @@ does not depend on the response $\llik(\designBatchIn)$. This is no longer the c
 $\Var[\llikEmRdmDens[\Naugment](\Par)]$, given that $\llikEmRdmDens[\Naugment](\Par)$ is a log-normal 
 random variable and hence its variance depends on $\emMean[\Naugment]{\llik}(\Par)$,  
 which in turn depends on $\llik(\designBatchIn)$ (see \ref{kriging_eqns}). 
-However, under the current GP model we have that 
-$\llik(\designBatchIn) \sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$.
-The dependence of $\emMean[\Naugment]{\llik}(\Par)$ on $\llik(\designBatchIn)$ is given in 
+We follow the approach of \cite{VehtariParallelGP} and assume that the unobserved response follows the 
+current GP predictive distribution. To avoid confusion with the true log-likelihood evaluations, we denote the 
+new design batch (with unobserved response) by 
+$\designRand{\designBatchLlik} \Def \{\designBatchIn, \designBatchLlik\}$, which is assumed 
+to satisfy 
+\begin{align}
+\designBatchLlik | \designBatchIn &\sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn)).
+\end{align}
+We let $\llikEmRdmDens[\Naugment](\Par; \designBatchLlik)$ denote the random variable with distribution 
+$\emLaw[{\designRand{\designBatchLlik}}]{\llikEm[\Ndesign]} \otimes \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$
+[\todo: sub/superscripts are out of control]. 
+The dependence of $\emMean[\Naugment]{\llik}(\Par; \designBatchLlik)$ on $\designBatchLlik$ is given in 
 \Cref{lemma:pred-mean-dist}. This lemma allows us to average over the uncertainty in  
-$\Var[\llikEmRdmDens[\Naugment](\Par)]$ stemming from the random quantity $\llik(\designBatchIn)$. 
+$\Var[\llikEmRdmDens[\Naugment](\Par; \designBatchLlik)]$ stemming from the random quantity $\designBatchLlik$. 
 \begin{lemma} \label{lemma:evar}
-Let $(\designBatchIn, \designBatchLlik)$ be a new batch of $\Nbatch$ design points, with 
-$\designBatchLlik \sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$. 
+Let $\{\designBatchIn, \designBatchLlik\}$ be a new batch of $\Nbatch$ design points, with 
+$\designBatchLlik | \designBatchIn \sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$. 
 For an arbitrary $\Par \in \parSpace$, it then follows that 
 \begin{align}
-\E_{\designBatchLlik} \Var[\llikEmRdmDens[\Naugment](\Par)]
-&= \Var[\llikEmRdmDens[\Ndesign](\Par) | \emMean[\Ndesign]{\llik}(\designBatchIn)]
+\E_{\designBatchLlik} \Var[\llikEmRdmDens[\Naugment](\Par; \designBatchLlik)]
+&= \Var\left[\llikEmRdmDens[\Naugment](\Par; \emMean[\Ndesign]{\llik}(\designBatchIn))\right]
 	\varInflation(\Par; \designBatchIn), \label{evar-expression}
 \end{align}
 where 
@@ -827,10 +857,10 @@ where
 \end{align}
 \end{lemma}
 A similar result is derived in \cite{VehtariParallelGP}.
-The interpretation of \Cref{lemma:evar} is similar to that for \Cref{lemma:pred-mean-dist}. 
+The interpretation of \Cref{lemma:evar} is similar to that of \Cref{lemma:pred-mean-dist}. 
 The first term in \ref{evar-expression} is the variance of the log-normal random variable
  $\llikEmRdmDens[\Ndesign](\Par)$ conditioned on the ``pseudo-data''
- $(\designBatchIn, \emMean[\Ndesign]{\llik}(\designBatchIn))$. The second term 
+ $\{\designBatchIn, \emMean[\Ndesign]{\llik}(\designBatchIn)\}$. The second term 
  $\varInflation(\Par; \designBatchIn)$, which we refer to as the \textit{variance inflation factor}, 
  accounts for the uncertainty due to $\designBatchLlik$. We note that 
 $\varInflation(\Par; \designBatchIn) \geq 1$ and the variance inflation is larger when the 
@@ -841,7 +871,7 @@ variance inflation is applied).
 With these preliminary results established, we define the $\intExpVarLabel$ criterion
 \begin{align}
 \labelAcq[\Ndesign]{\intExpVarLabel}(\designBatchIn) \Def
-\int_{\parSpace} \E_{\designBatchLlik} \Var[\llikEmRdmDens[\Naugment](\Par)] \weightDens(\Par) d\Par, 
+\int_{\parSpace} \E_{\designBatchLlik} \Var[\llikEmRdmDens[\Naugment](\Par; \designBatchLlik)] \weightDens(\Par) d\Par, 
 \end{align}
 emphasizing the the expectation is still with respect to 
 $\designBatchLlik \sim \Gaussian(\emMean[\Ndesign]{\llik}(\designBatchIn), \emKer[\Ndesign]{\llik}(\designBatchIn))$. 
@@ -850,19 +880,20 @@ Applying \Cref{lemma:evar} immediately gives the following simplification.
 The $\intExpVarLabel$ acquisition function is equal to 
 \begin{align}
 \labelAcq[\Ndesign]{\intExpVarLabel}(\designBatchIn) =
-\int_{\parSpace} \Var[\llikEmRdmDens[\Ndesign](\Par) | \emMean[\Ndesign]{\llik}(\designBatchIn)]
+\int_{\parSpace} \Var[\llikEmRdmDens[\Ndesign](\Par; \emMean[\Ndesign]{\llik}(\designBatchIn))]
 	\varInflation(\Par; \designBatchIn) \weightDens(\Par) d\Par, 
 \end{align}
 where the variance inflation factor $\varInflation(\Par; \designBatchIn)$ is defined in \ref{var_inflation_factor}. 
 \end{lemma}
 This criterion is considered in \cite{VehtariParallelGP} in training a log-likelihood emulator to be used for 
-approximate Bayesian computation. 
+approximate Bayesian computation. We emphasize that the integrand in \ref{var_inflation_factor} is 
+computable in closed-form, since the first term is simply the variance of log-normal random variable. 
 
 \paragraph{Forward Model Emulation}
 The acquisition function is defined identically in the forward model emulation setting, 
 \begin{align}
 \labelAcq[\Ndesign]{\fwdintExpVarLabel}(\designBatchIn) \Def
-\int_{\parSpace} \E_{\designBatchLlik} \Var[\fwdEmRdm[\Naugment]{\postDens}(\Par)] \weightDens(\Par) d\Par. \label{fwd-int-exp-var}
+\int_{\parSpace} \E_{\designBatchLlik} \Var[\fwdEmRdm[\Naugment]{\postDens}(\Par; \designBatchLlik)] \weightDens(\Par) d\Par. \label{fwd-int-exp-var}
 \end{align}
 To our knowledge, 
 the paper \cite{SinsbeckNowak} is the first to consider a design criterion of the form \ref{fwd-int-exp-var}. 
@@ -872,12 +903,12 @@ To derive this result, we begin with an analog to \Cref{lemma:pred-mean-dist}, w
 dependence of $\emMean[\Naugment]{\fwd}(\parMat)$ on $\fwd(\designBatchIn)$, under the assumption 
 that $\fwd(\designBatchIn)$ is distributed according to the current GP. 
 \begin{lemma} \label{lemma:fwd-pred-mean-dist}
-Let $(\designBatchIn, \designBatchFwd)$ be a new batch of $\Nbatch$ design points, with 
+Let $\{\designBatchIn, \designBatchFwd\}$ be a new batch of $\Nbatch$ design points, with 
 $\designBatchFwd \sim \Gaussian(\emMean[\Ndesign]{\fwd}(\designBatchIn), \emKer[\Ndesign]{\fwd}(\designBatchIn))$. 
-Then for an arbitrary set of inputs $\parMat$, the predictive mean $\emMean[\Naugment]{\fwd}(\parMat)$
+Then for an arbitrary set of inputs $\parMat$, the predictive mean $\emMean[\Naugment]{\fwd}(\parMat; \designBatchFwd)$
 (viewed as a function of the random variable $\designBatchFwd$), satisfies 
 \begin{align}
-\emMean[\Naugment]{\fwd}(\parMat) 
+\emMean[\Naugment]{\fwd}(\parMat; \designBatchFwd) 
 \sim \Gaussian\left(\E[\llikEmFwd[\Ndesign](\parMat) | \emMean[\Ndesign]{\fwd}(\designBatchIn)], 
                                \emKer[\Ndesign]{\fwd}(\parMat) - \emKer[\Naugment]{\fwd}(\parMat)] \right) \label{fwd-pred-mean-dist}
 \end{align}
@@ -1053,7 +1084,7 @@ where
 \tilde{K} = \kerMat[\Ndesign]^{-1} + \kerMat[\Ndesign]^{-1} \kerMat[\Ndesign,\Nbatch] \gpKer[\Ndesign](\designBatchIn)^{-1} \kerMat[\Nbatch,\Ndesign] \kerMat[\Ndesign]^{-1}.
 \end{align}
 Thus, assuming $\kerMat[\Ndesign]^{-1}$ has already been computed, $\gpKerPrior(\designIn[\Naugment])^{-1}$ can be constructed in an additional 
-$\BigO(\Nbatch^3 + \Nbatch \Ndesign^2)$ operations. 
+$\BigO(\Nbatch^3 + \Nbatch \Ndesign^2 + \Nbatch^2 \Ndesign)$ operations. 
 \end{prop}
 
 We have casually used the fact $\funcEm[\Naugment] = \func | \func(\designIn[\Naugment]) = \funcEm[\Ndesign] | \func(\designBatchIn)$ throughout 
@@ -1127,8 +1158,23 @@ $\gpKerPrior(\designIn[\Ndesign], \parMat)$ and $\gpKerPrior(\designIn[\Nbatch],
 \end{proof}
 
 
-
 \begin{proof} [Proof of \Cref{lemma:pred-mean-dist}]
+We recall that 
+\begin{align*}
+\gpMean[\Naugment](\parMat; \designBatchFunc) 
+&= \E[\funcEm[\Ndesign](\parMat) | (\designBatchIn, \designBatchFunc)] \\
+&= \gpMean[\Ndesign](\parMat) + \gpKer[\Ndesign](\parMat, \designBatchIn) \gpKer[\Ndesign](\designBatchIn)^{-1} [\designBatchFunc - \gpMean[\Ndesign](\designBatchIn)],
+\end{align*}
+following from the GP predictive equations \ref{kriging_eqns}. Since, $\designBatchFunc|\parMat \sim \Gaussian(\gpMean[\Ndesign](\designBatchIn), \gpKer[\Ndesign](\designBatchIn))$, 
+we see that $\gpMean[\Naugment](\parMat; \designBatchFunc)$ is a linear function of a Gaussian random variable. It is thus Gaussian distributed, with mean and covariance
+\begin{align*}
+\E_{\designBatchFunc}[\gpMean[\Naugment](\parMat; \designBatchFunc)]
+&= \gpMean[\Ndesign](\parMat) + \gpKer[\Ndesign](\parMat, \designBatchIn) \gpKer[\Ndesign](\designBatchIn)^{-1} [\gpMean[\Ndesign](\designBatchIn) - \gpMean[\Ndesign](\designBatchIn)] = \gpMean[\Ndesign](\parMat) \\
+\Cov_{\designBatchFunc}[\gpMean[\Naugment](\parMat; \designBatchFunc)]
+&= \gpKer[\Ndesign](\parMat, \designBatchIn) \gpKer[\Ndesign](\designBatchIn)^{-1}  \gpKer[\Ndesign](\designBatchIn) \gpKer[\Ndesign](\designBatchIn)^{-1} \gpKer[\Ndesign](\designBatchIn, \parMat) \\
+&=  \gpKer[\Ndesign](\parMat, \designBatchIn) \gpKer[\Ndesign](\designBatchIn)^{-1} \gpKer[\Ndesign](\designBatchIn, \parMat) \\
+&= \gpKer[\Ndesign](\parMat) - \gpKer[\Naugment](\parMat).
+\end{align*}
 
 \end{proof}
 
