Added expected variance derivation in log-likelihood setting.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -2,6 +2,12 @@
 
 % Useful info on newcomand: https://tex.stackexchange.com/questions/117358/newcommand-argument-confusion
 
+% --------------------------------------------------------------------------------------------------
+% General 
+% --------------------------------------------------------------------------------------------------
+
+\newcommand{\cst}{C}
+
 
 % --------------------------------------------------------------------------------------------------
 % Bayesian inverse problem: general setup 
