Progress on integrated variance computations for forward model emulation setting.

--- a/math/latex_macros_gp_inv_prob.tex
+++ b/math/latex_macros_gp_inv_prob.tex
@@ -80,6 +80,7 @@
 \newcommand{\fwdEmMarg}[2][\Ndesign]{{#2}_{#1}^{\fwd \text{,marg}}}
 \newcommand{\llikEmMargDens}[1][\Ndesign]{\llikEmMarg[#1]{\postDens}} 
 \newcommand{\fwdEmMargDens}[1][\Ndesign]{\fwdEmMarg[#1]{\postDens}} 
+\newcommand{\CovComb}[1][\Ndesign]{\Em[{#1}]{\likPar}^{\fwd}}
 
 % Mean approximations. 
 \newcommand{\llikEmMean}[2][\Ndesign]{{#2}_{#1}^{\text{mean}}}
